--- a/css/styles.css
+++ b/css/styles.css
@@ -827,8 +827,8 @@ Showcase
 Screenshots Intro
 ========================================================================== */
 .screenshots-intro {
-    padding: 170px 0 100px 0;
-    background-color: #f6f7f9;
+    padding: 100px 0 50px 0;
+    background-color: #F6F7F9;
 }
 .screenshots-intro h1 {
     margin-bottom: 20px;
